force-app/main/default/objects/Product2/fields/Batch_price__c.field-meta.xml
<CustomField>
    <fullName>Batch_price__c</fullName>
    <description>Total production cost of one batch including ingredients, deposit, label and labor</description>
    <formula>(Unit_production_cost__c + Deposit_Price__c + Label_Price__c) * Batch_Production__c + Labor_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>