force-app/main/default/objects/Product2/fields/Batch_price_increase__c.field-meta.xml
<CustomField>
    <fullName>Batch_price_increase__c</fullName>
    <description>Este numero se multiplica por el Batch price / Batch production para conseguir el precio final al cliente</description>
    <label>Batch price increase</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>