force-app/main/default/objects/Product2/fields/Batch_Production__c.field-meta.xml
<CustomField>
    <fullName>Batch_Production__c</fullName>
    <description>Quantity of units are produced in each batch</description>
    <label>Batch production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>