force-app/main/default/objects/Product2/fields/Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price__c</fullName>
    <description>Calcula el precio final al cliente, sobre el precio por remesa, le aplica un incremento y lo divide por las unidades generadas en la remesa</description>
    <formula>IF(Batch_Production__c = 0, 0, (Batch_price__c * Batch_price_increase__c) / Batch_Production__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>