force-app/main/default/objects/Product2/fields/Deposit_Price__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Price__c</fullName>
    <description>Price in euros of the deposit for the container associated with this product</description>
    <label>Deposit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>