force-app/main/default/objects/Product2/fields/Euros_Margin__c.field-meta.xml
<CustomField>
    <fullName>Euros_Margin__c</fullName>
    <description>Amount in euros of the margin on the selling price</description>
    <label>Euros Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>