force-app/main/default/objects/Product2/fields/Label_Price__c.field-meta.xml
<CustomField>
    <fullName>Label_Price__c</fullName>
    <label>Label Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>