force-app/main/default/objects/Product2/fields/Labor_cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_cost__c</fullName>
    <label>Labor cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>