force-app/main/default/objects/Product2/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <description>% profit on production cost (Profit / Cost) × 100</description>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>