force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>Recipe__r.Name</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>