force-app/main/default/objects/Product2/fields/Production_Cost__c.field-meta.xml
<CustomField>
    <fullName>Production_Cost__c</fullName>
    <description>Production cost in euros without including deposit envas</description>
    <label>Production cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>