force-app/main/default/objects/Product2/fields/Quantity_ml__c.field-meta.xml
<CustomField>
    <fullName>Quantity_ml__c</fullName>
    <description>Product volume in ml</description>
    <label>Quantity (ml)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>