force-app/main/default/objects/Product2/fields/Recipe__c.field-meta.xml
<CustomField>
    <fullName>Recipe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recipe associated with this product</description>
    <label>Recipe</label>
    <referenceTo>Recipe__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>