force-app/main/default/objects/Product2/fields/Total_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Cost__c</fullName>
    <formula>IF(Batch_Production__c = 0, 0, Batch_price__c / Batch_Production__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Including label, labor and deposit price</inlineHelpText>
    <label>Total Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>