force-app/main/default/objects/Product2/fields/Unit_Container_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Container_Price__c</fullName>
    <description>Price in euros of the container associated with this product</description>
    <label>Unit Container Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>