force-app/main/default/objects/Product2/fields/Unit_production_cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_production_cost__c</fullName>
    <formula>Recipe__r.Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>without including labor, label neither deposit costs</inlineHelpText>
    <label>Unit production cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>