force-app/main/default/objects/Product2/fields/Unit_production_quantity__c.field-meta.xml
<CustomField>
    <fullName>Unit_production_quantity__c</fullName>
    <formula>Recipe__r.Total_Quantity_ml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit production quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>